# MagpieBOM

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/plans/: 2026-03-04-audit-remediation-design.md  2026-03-04-audit-remediation-plan.md
magpiebom/: batch.py  cli.py  constants.py  digikey.py  images.py  mouser.py  report.py  scraper.py  search.py  server.py  tracer.py  types.py  validator.py
magpiebom/templates/: base.html  batch.html  home.html
tests/: conftest.py  helpers.py  test_batch.py  test_cli.py  test_digikey.py  test_images.py  test_integration.py  test_mouser.py  test_report.py  test_scraper.py  test_search.py  test_server.py  test_tracer.py  test_validator.py
